--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "semantic": "semantic-ui#^2.2.11"
+    "semantic": "semantic-ui#^2.2.11",
+    "moment": "^2.18.1"
   }
 }
