--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "QualityWorks Consulting Group Jamaica (http://qualityworkscg.com/)",
   "license": "MIT",
   "devDependencies": {
-    "gulp-subtree": "0.1.0"
+    "gulp": "3.9.1",
+    "gulp-gh-pages": "0.5.4",
+    "gulp-install": "1.1.0"
   }
 }
